# never-break-the-chain

./: .gitignore  AGENTS.md  README.md  justfile  pyproject.toml
docs/: handoff.md
notebooks/: eda.qmd  lb-0-835-0-842-rule-based-baseline-v3.ipynb
requirements/: .current-requirement
requirements/2026-07-03-1300-cell-tracking-3d/: 00-initial-request.md  01-discovery-questions.md  02-discovery-answers.md  03-context-findings.md  04-detail-questions.md  05-detail-answers.md  06-requirements-spec.md  metadata.json
scripts/: bench_detect.py  check_detection_recall.py  visualize_sim.py
src/celltrack/: __init__.py  cli.py  constants.py  graph.py
src/celltrack/data/: __init__.py  download.py  geff.py  io.py
src/celltrack/detect/: __init__.py  base.py  cellpose_sam.py
src/celltrack/eval/: __init__.py  metric.py
src/celltrack/pretrain/: __init__.py  config.py  lineage.py  motion.py  noise.py  simulate.py
src/celltrack/submit/: __init__.py  submission.py
src/celltrack/track/: __init__.py  nearest_neighbor.py
tests/: test_cellpose_detector.py  test_geff.py  test_metric.py  test_simulate.py  test_submission.py
