[project]
name = "celltrack"
version = "0.1.0"
description = "3D+time cell tracking for the Biohub Cell Tracking During Development Kaggle competition"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "networkx>=3.2",
    "zarr>=2.17",
    "dask[array]>=2024.1",
    "tifffile>=2024.1",
    "scikit-image>=0.22",
    "typer>=0.12",
]

[project.optional-dependencies]
# Heavy ML deps kept optional so the core package + tests install fast and reliably.
detect = [
    "cellpose>=3.0",      # Cellpose-SAM (PyTorch); default detector
    "torch>=2.2",
]
baseline = [
    "ultrack>=0.6",       # reference tracker to benchmark against
]
eval-extra = [
    "traccuracy>=0.1",    # graph utilities (NOTE: not the scored metric)
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
eda = [
    "matplotlib>=3.8",    # EDA plots
    "jupyter>=1.0",       # Quarto Python execution (jupyter kernel + nbclient)
    "ipykernel>=6.29",
    "jupyter-cache>=1.0", # Quarto `execute: cache` for the EDA notebook
]

[project.scripts]
celltrack = "celltrack.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/celltrack"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
